<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/active_bg"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestionAct">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/DispName"
        android:textColor="#04FF0E"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/DispName"
        android:id="@+id/answers"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:focusable="true">
        <!--android:layout-->
        <!--android:checkedButton="@+id/radioButton"-->

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:id="@+id/ButtonA"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:id="@+id/ButtonB"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:id="@+id/ButtonC"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:id="@+id/ButtonD"
            android:checked="false" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answers"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp"
        android:background="#FF5722"
        android:text="@string/next_question"
        android:textColor="#000" />

    <TextView
        android:id="@+id/questionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answers"
        android:layout_alignParentStart="true"
        android:textColor="#03FD0D"
        android:layout_marginBottom="52dp"
        android:text="@string/questions"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
