<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="@drawable/img"
    tools:context=".DevActivity">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/about"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="#FFEB3B"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_bg"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            android:textColor="#FFEB3B"
            android:layout_height="wrap_content"

            android:padding="30dp"
            android:text="@string/Suhrob"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/backbtn"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_marginBottom="31dp"
            android:background="#01579B"
            android:textColor="#ffffff" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
