<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizapp"
        android:layout_marginTop="48dp"
        android:textSize="60sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editName"
        android:textColor="#F44336" />

<!--    <EditText-->
<!--        android:id="@+id/editName"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_centerVertical="true"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:autofillHints="username"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/enter_your_name"-->
<!--        android:inputType="textPersonName"-->
<!--        android:minHeight="48dp"-->
<!--        android:textColor="#df040b" />-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/start"
            android:layout_width="200dp"
            android:layout_height="52dp"
            android:layout_above="@+id/button2"
            android:layout_alignStart="@+id/editName"
            android:layout_marginBottom="25dp"
            android:background="#FF5722"
            android:text="@string/start"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/about"
            android:layout_width="200dp"
            android:layout_height="52dp"
            android:layout_alignStart="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="33dp"
            android:background="#01579B"
            android:text="@string/about"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/quit"
            android:layout_width="200dp"
            android:layout_height="52dp"
            android:layout_alignStart="@+id/button2"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="33dp"
            android:background="#01579B"
            android:text="@string/quit"
            android:textColor="#ffffff"
            android:textSize="30sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>